initial commit from am laptop

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h3 class="currentScore_0">0</h3>
         </div>
       </section>
-
+      <!-- that's comment is created for see the git reaction -->
       <!-- Player 1 -->
       <section class="player_1">
         <div class="playerContainer">
