Final Commit - Enjoy the Game

--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
           <h3 class="currentScore_0">0</h3>
         </div>
       </section>
-      <!-- that's comment is created for see the git reaction -->
       <!-- Player 1 -->
       <section class="player_1">
         <div class="playerContainer">
           <h1 class="player-titr_1">Player 2</h1>
-          <h2 class="totalScore_1"></h2>
+          <h2 class="totalScore_1">0</h2>
         </div>
 
         <div class="currentContainer">
@@ -52,6 +51,15 @@
       <!-- Dice Section -->
       <div class="diceContainer">
         <img src="Dice/Dice-2.svg" class="dice" height="100%" alt="" />
+      </div>
+    </div>
+
+    <!-- Modal Section -->
+
+    <div class="glory" id="glory">
+      <div class="modal" id="modal">
+        <h2>Game Was Finished</h2>
+        <a href="#" class="newGameLink">New Game</a>
       </div>
     </div>
 
